# Parse_CZI

./: README.md  ReadMe.md  czi_metaData.py  czi_metadata.xml  parse_czi_zenlite.py  pyproject.toml  requirements.txt
