[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "parse-czi"
version = "0.1.0"
description = "Utilities for parsing Zeiss CZI files"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "luoolu"}
]
dependencies = [
    "numpy~=1.26.4",
    "tifffile~=2023.2.28",
    "aicsimageio~=4.14.0",
    "czifile~=2019.7.2",
]

[tool.setuptools.packages.find]
include = ["parse_czi*"]

[project.scripts]
parse-czi-zenlite = "parse_czi.zenlite:main"
parse-czi-zenlite-ultrafast = "parse_czi.zenlite_ultrafast:main"